CANDLEPIN-912: Updated product endpoints to support improved querying
- Added the "name", "active", and "custom" filters to the query
  parameters of the GET /owners/{key}/products endpoint
- Added the "owner", "name", "active", and "custom" filters to the
  query parameters of the GET /products endpoint
- Removed the now-redundant "omit_globals" query parameter from both
  GET /owners/{key}/products and GET /products endpoints
- Reworked the GET /products and GET /owner/{key}/products endpoints
  to support filtering on product IDs, product names, and the "active"
  and "custom" states
- Added a new query builder object for building dynamic product
  queries